tests/should_succeed/struct.jou
declare printf(format: byte*, ...) -> int

struct Foo:
    num: int
    text: byte*

def increment(f: Foo*) -> void:
    ++f->num

def main() -> int:
    foo = Foo{num = 1, text = "hello"}
    printf("%d %s\n", foo.num, foo.text)  # Output: 1 hello

    increment(&foo)
    printf("%d %s\n", foo.num, foo.text)  # Output: 2 hello

    return 0
